Connection String is added

--- a/MVC_CRUD_APP/appsettings.json
+++ b/MVC_CRUD_APP/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NZWalksConnectionString": "Server=LAPTOP-SMTECU8B\\SQLEXPRESS;Database=organization_db;User Id=sa;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
