Name of Connection String is updated

--- a/MVC_CRUD_APP/appsettings.json
+++ b/MVC_CRUD_APP/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NZWalksConnectionString": "Server=LAPTOP-SMTECU8B\\SQLEXPRESS;Database=organization_db;User Id=sa;Trusted_Connection=True;TrustServerCertificate=True;"
+    "MVC_CRUD_APP_ConnectionString": "Server=LAPTOP-SMTECU8B\\SQLEXPRESS;Database=organization_db;User Id=sa;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
